syntax = "proto3";

package note.v1;

message Note {
  int64 id = 1;
  string body = 2;
}

service NoteService {
  rpc GetNoteList(GetNoteListRequest) returns (GetNoteListResponse);
}

message GetNoteListRequest {}

message GetNoteListResponse {
  repeated Note notes = 1;
}
